BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Address_vod__c.object
<CustomObject>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>State of the Address</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AISNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPES DE H. PROVENCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPES MARITIMES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARDECHE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARDENNES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIEGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVEYRON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAS-RHIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUCHES DU RHONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALVADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANTAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARENTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARENTE-MARITIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORREZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORSE DU SUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORSE-DU-SUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COTE-D&apos;OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COTES D&apos;ARMOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREUSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.O.M.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEUX-SEVRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DORDOGNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOUBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DROME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the status of an address record.</description>
        <label>Address Status</label>
        <picklist>
            <picklistValues>
                <fullName>Flag as Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Flag for Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_4_vod__c</fullName>
        <description>ZIP + 4 of the Address</description>
        <label>Zip + 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Zip code of the Address</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_vod__c</columns>
        <columns>NAME</columns>
        <columns>Primary_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Address line 1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>BMS_Address</fullName>
        <active>true</active>
        <description>Office address maintained centrally</description>
        <label>BMS Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Address_MEA</fullName>
        <active>true</active>
        <description>BMS ACN: April 2016 - Address Record Type for MEA</description>
        <label>BMS Address (MEA)</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Address_Pending</fullName>
        <active>true</active>
        <description>Temporary Address Record Type for User Created Addresses</description>
        <label>BMS Address (Pending)</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Canada_Address</fullName>
        <active>true</active>
        <description>Canada specific adress</description>
        <label>BMS - Canada - Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Canada_New_Address</fullName>
        <active>true</active>
        <description>Used for new Addresses created</description>
        <label>BMS - Canada - New Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>RepMaintained</fullName>
        <active>true</active>
        <description>Office address maintained by Rep</description>
        <label>Rep Maintained</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BMS_Prohibit_Address_Line_1_Edits</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 

OR(ISCHANGED(Name)), 

AND ( ($UserRole.Name &lt;&gt; &quot;System Administrator&quot;), ($Profile.Name &lt;&gt; &quot;System Administrator&quot;), ($Profile.Name &lt;&gt; &quot;BMS - Integration User&quot;) ) 

)</errorConditionFormula>
        <errorMessage>You cannot edit the Address Line 1 information. Please flag the address as incorrect if you believe that the address information should be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DEA_Puerto_Rico_vod</fullName>
        <active>true</active>
        <description>his validation rules is in place to confirm that a DEA Address for Puerto Rico has an ASSMCA Number populated.</description>
        <errorConditionFormula>AND(DEA_Address_vod__c, TRIM(TEXT( State_vod__c)) = &quot;PR&quot;, TRIM(ASSMCA_vod__c) = &quot;&quot;,  Account_vod__r.IsPersonAccount )</errorConditionFormula>
        <errorMessage>The ASSMCA Number is required when creating a DEA Address for Puerto Rico.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DEA_Schedule_Confirm_vod</fullName>
        <active>true</active>
        <description>This validation rules is in place to confirm that an Address, which has been marked as a DEA Address has a Schedule.</description>
        <errorConditionFormula>AND(DEA_Address_vod__c, OR(TRIM( DEA_Schedule_vod__c) = &quot;&quot;, TRIM(DEA_vod__c) = &quot;&quot;, TRIM(TEXT(DEA_Status_vod__c)) = &quot;&quot;, ISNULL(DEA_Expiration_Date_vod__c) ),  Account_vod__r.IsPersonAccount  )</errorConditionFormula>
        <errorMessage>The DEA Number, DEA Schedule, DEA Status, and DEA Expiration Date are required when creating a DEA Address.</errorMessage>
    </validationRules>
</CustomObject>